# EmaComp

./: CMakeLists.txt  README.md  main.cpp  test1.txt  tests.txt  Я соберу проект под Windows.cmd
